# main-cpp-temp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
docs/prj/: inaug.md
docs/ref/: generate_docs.sh
docs/templ/: Doxyfile.in  README.md.in
include/meta/: info.h  version.h
include/meta/templ/: info.h.in  version.h.in
src/: CMakeLists.txt  main.cpp
src/meta/: CMakeLists.txt
tests/unit/: CMakeLists.txt
